# truncated-gaussian

./: README.md  pyproject.toml
tests/: test_moments.py
truncated_gaussian/: marginals.py  moments.py
